# docs/swagger.yaml
@@ -741,6 +741,120 @@ paths:
       summary: Get the input of the indexed puzzle from a theme, from a catalog
       tags:
       - Catalogs
+  /catalogs/{catalogID}/themes/{themeID}/puzzles/{puzzleID}/inputs/{inputID}/first/{solution}:
+    get:
+      consumes:
+      - application/json
+      description: Check if the submitted solution is the right solution for the first
+        part of the puzzle
+      parameters:
+      - description: API ID
+        in: path
+        name: catalogID
+        required: true
+        type: string
+      - description: Theme ID
+        in: path
+        name: themeID
+        required: true
+        type: string
+      - description: Puzzle ID
+        in: path
+        name: puzzleID
+        required: true
+        type: string
+      - description: Input ID
+        in: path
+        name: inputID
+        required: true
+        type: string
+      - description: Solution ID
+        in: path
+        name: solution
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/catalogs.PuzzleResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - Bearer: []
+      summary: Check if the submitted solution is the right solution for the first
+        part of the puzzle
+      tags:
+      - Catalogs
+  /catalogs/{catalogID}/themes/{themeID}/puzzles/{puzzleID}/inputs/{inputID}/second/{solution}:
+    get:
+      consumes:
+      - application/json
+      description: Check if the submitted solution is the right solution for the second
+        part of the puzzle
+      parameters:
+      - description: API ID
+        in: path
+        name: catalogID
+        required: true
+        type: string
+      - description: Theme ID
+        in: path
+        name: themeID
+        required: true
+        type: string
+      - description: Puzzle ID
+        in: path
+        name: puzzleID
+        required: true
+        type: string
+      - description: Input ID
+        in: path
+        name: inputID
+        required: true
+        type: string
+      - description: Solution ID
+        in: path
+        name: solution
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/catalogs.PuzzleResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - Bearer: []
+      summary: Check if the submitted solution is the right solution for the second
+        part of the puzzle
+      tags:
+      - Catalogs
   /competitions:
     get:
       consumes:
